<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vocales">

    <ImageView
        android:id="@+id/fondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fondo"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo2"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/vocales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vocales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/vocales"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/backvoc"
        android:layout_width="60dp"
        android:layout_height="60dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.020"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200"
        android:src="@drawable/flecha_back"
        tools:ignore="MissingConstraints"/>
    <ImageButton
        android:id="@+id/a"
        android:layout_width="133dp"
        android:layout_height="226dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/a"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"
        app:srcCompat="@drawable/globoa"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/e"
        android:layout_width="128dp"
        android:layout_height="230dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/e"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586"
        app:srcCompat="@drawable/globoe" />

    <ImageButton
        android:id="@+id/i"
        android:layout_width="130dp"
        android:layout_height="239dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/i"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        app:srcCompat="@drawable/globoi"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/o"
        android:layout_width="124dp"
        android:layout_height="248dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/o"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/globoo"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/u"
        android:layout_width="121dp"
        android:layout_height="232dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/u"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967"
        app:srcCompat="@drawable/globou"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>